--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,8 +29,11 @@
         "prettier"
     ],
     "rules": {
+        "react/jsx-props-no-spreading": "off",
+        "react/prop-types": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
+        "no-unused-expressions":"off",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
         "import/prefer-default-export": "off",
         "@typescript-eslint/explicit-function-return-type":[
